[project]
name = "casbin-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Coulton Fraser", email = "coulton.fraser@encana.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
